--- a/frontend/src/assets/styles/pages/_LobbyPage.scss
+++ b/frontend/src/assets/styles/pages/_LobbyPage.scss
@@ -1,6 +1,12 @@
 @use '../utils' as *;
 
 .lobby-page {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+
     .block-list {
         display: flex;
         flex-direction: column;
