--- a/frontend/src/assets/styles/components/_Header.scss
+++ b/frontend/src/assets/styles/components/_Header.scss
@@ -9,6 +9,11 @@
         font-size: 20px;
     }
 
+    .logo-role {
+        display: flex;
+        align-items: center;
+    }
+
     .nav-list {
         display: flex;
         align-items: center;
