--- a/frontend/src/assets/styles/pages/_CodeBlockPage.scss
+++ b/frontend/src/assets/styles/pages/_CodeBlockPage.scss
@@ -42,7 +42,15 @@
 
     }
 
-
-
+    .big-smily-face {
+        $size: 350px;
+        width: $size;
+        height: $size;
+        border-radius: 50%;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        translate: -50% -50%;
+    }
 
 }
