--- a/frontend/src/assets/styles/components/_Header.scss
+++ b/frontend/src/assets/styles/components/_Header.scss
@@ -2,7 +2,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0.75rem 1rem;
+    padding: 0 1rem;
+    height: 50px;
     border-bottom: 1px solid rgba(128, 128, 128, 0.3);
 
     h1 {
