--- a/frontend/src/assets/styles/pages/_CodeBlockPage.scss
+++ b/frontend/src/assets/styles/pages/_CodeBlockPage.scss
@@ -1,45 +1,39 @@
 .code-block-page {
     display: flex;
+    height: auto;
     flex-direction: column;
-    gap: 1rem;
+    align-items: center;
+    gap: 0.4rem;
+    padding-inline: 10px;
+    padding-block: 20px;
 
     .title {
+        width: 100%;
+        font-size: 1.5rem;
         text-align: center;
+    }
+
+    .code-editor {
+        width: 100%;
+        min-height: 400px;
+        flex-grow: 1;
+    }
+
+    .console {
+        width: 100%;
+        font-size: 1.2rem;
+        text-align: center;
+        padding-top: 20px;
+    }
+
+    .code-output {
+        width: 100%;
+        height: 200px;
     }
 
     .submit-btn {
         padding: 5px 10px;
         align-self: center;
-
-    }
-
-    .description {
-        padding-inline: 1rem;
-        align-self: left;
-    }
-
-    .excerise-container {
-        $editor-height: 300px;
-        $editor-width: 50%;
-
-        width: 100%;
-        display: flex;
-        padding-inline: 1rem;
-        gap: 1px;
-        justify-content: center;
-        flex-direction: row;
-
-        .code-editor {
-            width: $editor-width;
-            height: $editor-height;
-        }
-
-        .code-output {
-            width: $editor-width;
-            height: $editor-height;
-        }
-
-
     }
 
     .big-smily-face {
@@ -52,5 +46,21 @@
         left: 50%;
         translate: -50% -50%;
     }
+}
 
+@media (min-width: 600px) {
+    .code-block-page {
+        height: calc(100vh - 50px);
+        padding-inline: 50px;
+
+        .title {
+            font-size: 2rem;
+        }
+
+        .console {
+            font-size: 1.5rem;
+            padding-block-start: 20px;
+        }
+
+    }
 }
