--- a/frontend/src/assets/styles/pages/_LobbyPage.scss
+++ b/frontend/src/assets/styles/pages/_LobbyPage.scss
@@ -1,25 +1,33 @@
 @use '../utils' as *;
 
 .lobby-page {
-    height: 100%;
+    height: calc(100vh - 50px);
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 1rem;
+    padding-top: 20px;
 
     .block-list {
+        width: 100%;
+        max-width: 800px;
         display: flex;
         flex-direction: column;
         gap: 1rem;
+
     }
 
     .block-item {
-        cursor: pointer;
         margin-inline: 10px;
-        width: 300px;
         padding: 1rem;
         border-radius: 0.5rem;
-        background-color: $clr02;
+        background-color: rgb(222, 222, 222);
         text-align: left;
+        cursor: pointer;
+
+        &:hover {
+            background-color: rgb(171, 171, 171);
+        }
     }
+
 }
