--- a/frontend/src/assets/styles/pages/_CodeBlockPage.scss
+++ b/frontend/src/assets/styles/pages/_CodeBlockPage.scss
@@ -15,8 +15,7 @@
 
     .code-editor {
         width: 100%;
-        min-height: 400px;
-        flex-shrink: 0;
+        height: 400px;
     }
 
     .console {
